# trbxai

./: README.md  pyproject.toml
examples/: example_ctgan.ipynb  example_ctgan_and_shap_dataset.csv  example_shap.ipynb
src/trbxai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trbxai/explain/: shapset_explainer.py
src/trbxai/generate/: ctgan_generator.py
tests/: test_ctgan_generator.py  test_shapset_explainer.py
